@@ -15,7 +15,6 @@ import school.faang.user_service.entity.User;
 import school.faang.user_service.entity.recommendation.RecommendationRequest;
 import school.faang.user_service.entity.recommendation.SkillRequest;
 import school.faang.user_service.filter.requestfilter.CreateAtFilter;
-import school.faang.user_service.filter.requestfilter.MessageFilter;
 import school.faang.user_service.filter.requestfilter.ReceiverIdFilter;
 import school.faang.user_service.filter.requestfilter.RequestFilter;
 import school.faang.user_service.filter.requestfilter.RequestStatusFilter;
@@ -27,7 +26,6 @@ import school.faang.user_service.validator.RecommendationRequestValidator;
 import school.faang.user_service.validator.SkillValidator;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -77,7 +75,7 @@ class RecommendationRequestServiceTest {
                 .id(2L)
                 .requesterId(2L)
                 .receiverId(2L)
-                .skillsId(Collections.emptyList())
+                .skillsId(List.of(2L))
                 .createdAt(createdAt)
                 .updatedAt(createdAt)
                 .build();
@@ -95,11 +93,11 @@ class RecommendationRequestServiceTest {
                 .id(2L)
                 .requester(User.builder().id(2L).build())
                 .receiver(User.builder().id(2L).build())
+                .skills(List.of(SkillRequest.builder().id(2L).build()))
                 .createdAt(createdAt)
                 .updatedAt(createdAt)
                 .build();
         List<RequestFilter> filters = List.of(
-                new MessageFilter(),
                 new SkillRequestFilter(),
                 new ReceiverIdFilter(),
                 new RequestStatusFilter(),
@@ -118,28 +116,11 @@ class RecommendationRequestServiceTest {
     @Test
     void testGetRequestsWithAllFilters() {
         RequestFilterDto requestFilterDto = RequestFilterDto.builder()
-                .messagePattern("ssa")
                 .statusPattern(RequestStatus.ACCEPTED)
                 .skillsPattern(List.of(1L))
                 .requesterIdPattern(1L)
                 .receiverIdPattern(1L)
                 .createdAtPattern(createdAt)
-                .build();
-
-        Mockito.when(recommendationRequestRepository.findAll())
-                .thenReturn(List.of(entity1, entity2));
-
-        List<RecommendationRequestDto> expected = List.of(requestDto1);
-
-        List<RecommendationRequestDto> actual = recommendationRequestService.getRequests(requestFilterDto);
-
-        assertEquals(expected, actual);
-    }
-
-    @Test
-    void testGetRequestsWithMessageFilter() {
-        RequestFilterDto requestFilterDto = RequestFilterDto.builder()
-                .messagePattern("ssa")
                 .build();
 
         Mockito.when(recommendationRequestRepository.findAll())
